--- a/09-lection7/01-burger-menu/index.html
+++ b/09-lection7/01-burger-menu/index.html
@@ -7,10 +7,19 @@
         <script defer src="./burger-menu.js"></script>
     </head>
     <body>
-        <div class="burger-menu">
+        <div class="button button__primery" id="burger-menu-open">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M3 12H21" stroke="#495057" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M3 6H21" stroke="#495057" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M3 18H21" stroke="#495057" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                
+        </div>
+        <div class="burger-menu" id="burger-menu">
+
             <div class="container">                
                 <div class="header__mobile">
-                <div class='header__cicle'> 
+                <div class='header__cicle' id="burger-menu-close"> 
                   <svg class="header__crest" width="12" height="12" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M1 1L13 13" stroke="#212429" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
